--- a/index.html
+++ b/index.html
@@ -32,5 +32,57 @@
         </div>
       </div>
     </div>
+    <div class="lesson-wrapper">
+<div class="kotak">
+        <div class="heading">
+          <h2>Wisata Populer</h2>
+        </div>
+		<div class="lesson">
+            <div class="lesson-icon">
+              <img src="labuanbajo.jpg" class="rotate">
+               <p><b><center>Labuan Bajo</center></b></p>
+            </div>
+             <p class="text-contents">Destinasi Wisata Alam yang berada di Kabupaten Manggarai Barat, provinsi Nusa Tenggara Timur dengan salah satu ciri khas hewan langkanya yaitu Komodo yang berada di Taman Nasional Komodo.</p>
+          </div>
+		  <div class="lesson">
+            <div class="lesson-icon">
+              <img src="Borobudur.jpg" class="rotate">
+              <p><b><center>Borobudur</center></b></p>
+            </div>
+            <p class="text-contents">Candi berbentuk stupa ini didirikan oleh para penganut agama Buddha Mahayana sekitar tahun 800-an Masehi pada masa pemerintahan wangsa Syailendra. Borobudur adalah candi atau kuil Buddha terbesar di dunia, sekaligus salah satu monumen Buddha terbesar di Dunia.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="danautoba.png" class="rotate">
+              <p><b><center>Danau Toba</center></b></p>
+            </div>
+            <p class="text-contents">Danau Toba adalah danau alami berukuran besar di Indonesia yang berada di kaldera Gunung Supervulkan. Danau ini memiliki panjang 100 KM,Lebar 30 KM, dan kedalaman 1600 M. Danau ini terletak di tengah pulau Sumatra bagian utara dengan ketinggian permukaan sekitar 900 M</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="likupang.jpg" class="rotate">
+              <p><b><center>Likupang</center></b></p>
+            </div>
+            <p class="text-contents">Likupang berada di Minahasa,Sulawesi Utara. Tempat ini menyimpan banyak eksotisme wisata alam yang layak dieksplor lebih jauh. Keelokannya bisa dinikmati mulai dari savana, pantai, hutan bakau, hingga pemandangan bawah laut. Karena pesona alamnya tersebut, pemerintah Indonesia menjadikan Likupang sebagai destinasi super prioritas.</p>
+          </div>
+		<center><div class="lesson">
+            <div class="lesson-icon">
+              <img src="Mandalika.jpg" class="rotate">
+              <p><b><center>Mandalika<center></b></p>
+            </div>
+            <p class="text-contents">Mandalika terkenal karena memiliki pemandangan alam yang begitu cantik dan mempesona serta telah dipromosikan oleh Kementrian Pariwisata. Terlebih lagi dengan mulai dibangunnya Sirkuit Mandalika yang nantinya akan jadi kompetisi ajang MotoGP 2021.</p>
+          </div>
+		 </center>
+          <div class="clear"></div>
+        </div>
+</div>
+<div class="ndisor-wrapper">
+<h2>Tentang Kami</h2>
+<div class="tentang">
+Kami menyajikan info mengenai tempat-tempat pariwisata dan kebudayaan yang populer di Indonesia. 
+<br>
+Lengkap dengan info menarik dengan harga yang terjangkau.
+</div>
+</div>
   </body>
 </html>
