--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 		<div class="lesson">
             <div class="lesson-icon">
-              <img src="labuanbajo.jpg" class="rotate">
+              <img src="Labuanbajo.jpg" class="rotate">
                <p><b><center>Labuan Bajo</center></b></p>
             </div>
              <p class="text-contents">Destinasi Wisata Alam yang berada di Kabupaten Manggarai Barat, provinsi Nusa Tenggara Timur dengan salah satu ciri khas hewan langkanya yaitu Komodo yang berada di Taman Nasional Komodo.</p>
@@ -67,7 +67,7 @@
           </div>
 		<center><div class="lesson">
             <div class="lesson-icon">
-              <img src="Mandalika.jpg" class="rotate">
+              <img src="mandalika.jpg" class="rotate">
               <p><b><center>Mandalika<center></b></p>
             </div>
             <p class="text-contents">Mandalika terkenal karena memiliki pemandangan alam yang begitu cantik dan mempesona serta telah dipromosikan oleh Kementrian Pariwisata. Terlebih lagi dengan mulai dibangunnya Sirkuit Mandalika yang nantinya akan jadi kompetisi ajang MotoGP 2021.</p>
