--- a/index.html
+++ b/index.html
@@ -43,51 +43,62 @@
 		    <div class="lesson">
           <div class="lesson-icon">
             <img src="Labuanbajo.jpg" class="rotate">
-              <p><b><center>Labuan Bajo</center></b></p>
+              <p>Labuan Bajo</p>
           </div>
           <p class="text-contents">Destinasi Wisata Alam yang berada di Kabupaten Manggarai Barat, provinsi Nusa Tenggara Timur dengan salah satu ciri khas hewan langkanya yaitu Komodo yang berada di Taman Nasional Komodo.</p>
         </div>
 		    <div class="lesson">
           <div class="lesson-icon">
             <img src="Borobudur.jpg" class="rotate">
-              <p><b><center>Borobudur</center></b></p>
+              <p>Borobudur</p>
           </div>
-          <p class="text-contents">Candi berbentuk stupa ini didirikan oleh para penganut agama Buddha sekitar tahun 800-an Masehi pada masa pemerintahan wangsa Syailendra. Borobudur adalah candi Buddha terbesar di dunia, sekaligus salah satu monumen Buddha terbesar di Dunia.</p>
+          <p class="text-contents">Candi berbentuk stupa ini didirikan oleh para penganut agama Buddha sekitar tahun 800-an Masehi. Borobudur adalah candi Buddha terbesar di dunia, sekaligus salah satu monumen Buddha terbesar di Dunia.</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
             <img src="danautoba.png" class="rotate">
-              <p><b><center>Danau Toba</center></b></p>
+              <p>Danau Toba</p>
           </div>
-          <p class="text-contents">Danau Toba adalah danau alami berukuran besar di Indonesia yang berada di kaldera Gunung Supervulkan. Danau ini memiliki panjang 100 km, lebar 30 km, dan kedalaman 1600 m. Danau ini terletak di tengah pulau Sumatra utara.</p>
+          <p class="text-contents">Danau Toba adalah danau alami berukuran besar yang berada di kaldera Gunung Supervulkan. Danau ini memiliki panjang 100 km, lebar 30 km, dan kedalaman 1600 m. Danau ini terletak di tengah pulau Sumatra utara.</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
             <img src="likupang.jpg" class="rotate">
-            <p><b><center>Likupang</center></b></p>
+            <p>Likupang</p>
           </div>
-          <p class="text-contents">Likupang berada di Minahasa, Sulawesi Utara. Tempat ini menyimpan banyak eksotisme wisata alam yang layak dieksplor lebih jauh. Keelokannya bisa dinikmati mulai dari savana, pantai, hutan bakau, hingga pemandangan bawah laut.</p>
+          <p class="text-contents">Likupang berada di Minahasa, Sulawesi Utara. Tempat ini menyimpan banyak eksotisme wisata alam. Keelokannya bisa dinikmati mulai dari savana, pantai, hutan bakau, hingga pemandangan bawah laut.</p>
         </div>
-		    <center>
         <div class="lesson">
           <div class="lesson-icon">
             <img src="mandalika.jpg" class="rotate">
-            <p><b><center>Mandalika<center></b></p>
+            <p>Mandalika</p>
           </div>
-          <p class="text-contents">Mandalika terkenal karena memiliki pemandangan alam yang begitu cantik dan mempesona serta telah dipromosikan oleh Kementrian Pariwisata. Terlebih lagi dengan mulai dibangunnya Sirkuit Mandalika yang nantinya akan jadi kompetisi ajang MotoGP 2021.</p>
+          <p class="text-contents">Mandalika terkenal dengan pemandangan alam yang begitu  mempesona dan indah. Terlebih lagi dengan mulai dibangunnya Sirkuit Mandalika yang nantinya akan jadi kompetisi ajang MotoGP 2021.</p>
         </div>
-		    </center>
         <div class="clear"></div>
       </div>
     </div>
+
     <div class="ndisor-wrapper">
-      <h3>Tentang</h3>
-      <hr>
-        <div class="tentang">
-          Kami menyajikan info mengenai tempat-tempat pariwisata dan kebudayaan yang populer di Indonesia. 
-          <br>
-          Lengkap dengan info menarik dengan harga yang terjangkau.
+      <div class="container">
+        <div class="heading">
+          <h3>Tentang</h3>
+          <hr>
         </div>
+        <div class="left-right">
+          <div id="left">
+            <div class="tentang">
+              Selamat datang di Xplore Indonesia, <br>
+              Kami melayani pemesanan paket tour wisata liburan di 5 daerah wisata terpopuler di Indonesia dengan tujuan wisata Danau Toba - Sumatera Utara, Borobudur - Jawa Tengah, Labuan Bajo - Nusa Tenggara Timur, Likupang - Sulawesi Utara dan Mandalika - Nusa Tenggara Barat. Kami juga menyajikan info terupdate mengenai tempat-tempat wisata dan kebudayaan yang populer di Indonesia. Nikmati liburan seru anda dengan Xplore Indonesia. Ayo miliki pengalaman liburan seru dengan harga yang terjangkau.
+            </div>
+          </div>
+          <div id="right">
+            <div class="about-img">
+              <img src="tour1.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="middle-wrapper">
         <div class="container">
@@ -117,45 +128,45 @@
             </figure>
           </div>
         </div>
-      </div>
+    </div>
 
     <div class="middle-two-wrapper">
       <div class="container">
-        <h3>Cara Booking</h3>
-        <hr>
-        <div class="cara-booking">
-          <div class="cara">
-            <div class="illustrasi">
-              <img src="calendar.png" alt="">
-              <p>Pilih Hari & Tanggal</p>
-            </div>
-            <p class="text">Pilih hari, tanggal dan bulan liburan untuk check in dan check out</p>
-          </div>
-          <div class="cara">
-            <div class="illustrasi">
-              <img src="destination.png" alt="">
-              <p>Pilih Tujuan Wisata</p>
-            </div>
-            <p class="text">Pilih tujuan wisata liburan yang anda inginkan</p>
-          </div>
-          <div class="cara">
-            <div class="illustrasi">
-              <img src="hotel1.png" alt="">
-              <p>Pilih Hotel</p>
-            </div>
-            <p class="text">Pilih hotel yang dekat dengan tempat wisata pilihan anda</p>
-          </div>
-          <div class="cara">
-            <div class="illustrasi">
-              <img src="pickup.png" alt="">
-              <p>Jemput di Hotel</p>
-            </div>
-            <p class="text">Kami akan menjemput anda di hotel dan siap mengantarkan anda ke tujuan wisata</p>
-          </div>
-
+        <div class="heading">
+          <h3>Cara Booking</h3>
+          <hr>
         </div>
-
-      </div>
+          <div class="cara-booking">
+            <div class="cara">
+              <div class="illustrasi">
+                <img src="calendar.png" alt="">
+                <p>Pilih Hari & Tanggal</p>
+              </div>
+              <p class="text">Pilih hari, tanggal dan bulan liburan untuk check in dan check out.</p>
+            </div>
+            <div class="cara">
+              <div class="illustrasi">
+                <img src="destination.png" alt="">
+                <p>Pilih Tujuan Wisata</p>
+              </div>
+              <p class="text">Pilih tujuan wisata liburan yang anda inginkan.</p>
+            </div>
+            <div class="cara">
+              <div class="illustrasi">
+                <img src="hotel1.png" alt="">
+                <p>Pilih Hotel</p>
+              </div>
+              <p class="text">Pilih hotel yang dekat dengan tempat wisata pilihan anda.</p>
+            </div>
+            <div class="cara">
+              <div class="illustrasi">
+                <img src="pickup.png" alt="">
+                <p>Jemput di Hotel</p>
+              </div>
+              <p class="text">Kami akan menjemput anda di hotel dan siap mengantarkan anda ke tujuan wisata.</p>
+            </div>
+          </div>
+       </div>
     </div>	
   </body>
 </html>
