--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -167,6 +168,35 @@
             </div>
           </div>
        </div>
-    </div>	
+    </div>
+	  <footer>
+			<div class="footer-wrapper">
+				<div class="container">
+					<div class="heading">
+						<h2>Kesempatan terbatas, ayo gabung dan jelajahi Indonesia!</h2>
+					</div>
+					<div class="columns">
+						<div class="column">
+							<img src="logoweb.png">
+						</div>
+						<div class="column">
+							<h2>FOLLOW US</h2>
+							<div class="btn-wrapper">
+								<a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Our Facebook</a>
+								<br>
+								<a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Our Twitter</a>
+							</div>
+						</div>
+						<div class="column">
+							<h3>Imperium Square Lt. 2 Blok 13,</h3>
+							<h3>Metropolitan Kuningan Super Blok Kav. No. 1</h3>
+							<h3>Jl. HR Rasuna Said, Jakarta 12980.</h3>
+							<h3>Mail: info@xploreindonesia.com</h3>
+							<h3>Phone: (021)8370 7070/0857 1010 1010</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
   </body>
 </html>
