--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
     </div>
 	  <footer>
 			<div class="footer-wrapper">
-				<div class="container">
-					<div class="heading">
+				<div class="kotak-footer">
+					<div class="heading-footer">
 						<h2>Kesempatan terbatas, ayo gabung dan jelajahi Indonesia!</h2>
 					</div>
 					<div class="columns">
@@ -181,10 +181,10 @@
 						</div>
 						<div class="column">
 							<h2>FOLLOW US</h2>
-							<div class="btn-wrapper">
-								<a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Our Facebook</a>
+							<div class="button-wrapper">
+								<a href="#" class="button facebook"><span class="fa fa-facebook"></span>Our Facebook</a>
 								<br>
-								<a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Our Twitter</a>
+								<a href="#" class="button twitter"><span class="fa fa-twitter"></span>Our Twitter</a>
 							</div>
 						</div>
 						<div class="column">
