--- a/index.html
+++ b/index.html
@@ -171,20 +171,17 @@
     </div>
 	  <footer>
 			<div class="footer-wrapper">
-				<div class="kotak-footer">
-					<div class="heading-footer">
+				<div class="container">
+					<div class="heading">
 						<h2>Kesempatan terbatas, ayo gabung dan jelajahi Indonesia!</h2>
 					</div>
 					<div class="columns">
 						<div class="column">
-							<img src="logoweb.png">
-						</div>
-						<div class="column">
 							<h2>FOLLOW US</h2>
 							<div class="button-wrapper">
-								<a href="#" class="button facebook"><span class="fa fa-facebook"></span>Our Facebook</a>
+								<a href="" class="but facebook"><span class="fa fa-facebook"></span>Our Facebook</a>
 								<br>
-								<a href="#" class="button twitter"><span class="fa fa-twitter"></span>Our Twitter</a>
+								<a href="" class="but twitter"><span class="fa fa-twitter"></span>Our Twitter</a>
 							</div>
 						</div>
 						<div class="column">
