--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xplore Indonesia</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
-    <link rel="icon" type="image/png" href="lg.png">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link rel="icon" type="image/png" href="lg.png">
   </head>
   <body>
     <header>
@@ -208,10 +207,14 @@
 
     <footer>
       <div class="footer-wrapper">
+        <div class="kotak-footer">
           <div class="heading-footer">
             <h3>Kesempatan terbatas, ayo gabung dan jelajahi Indonesia!</h3>
           </div>
           <div class="columns">
+            <div class="column">
+              <img src="logoweb.png">
+            </div>
             <div class="column">
               <h4>FOLLOW US</h4>
               <div class="button-wrapper">
@@ -227,6 +230,7 @@
               Phone: (021)8370 7070/0857 1010 1010</p>
             </div>
           </div>
+        </div>
       </div>
     </footer>
   </body>
