--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="column">
               <h4>FOLLOW US</h4>
               <div class="button-wrapper">
-                <a href="#" class="button facebook"><span class="fa fa-facebook"></span>Our Facebook</a>
+                <a href="https://www.facebook.com/Xplore-Indonesia-100501788390854/" class="button facebook"><span class="fa fa-facebook"></span>Our Facebook</a>
                 <br>
                 <a href="#" class="button twitter"><span class="fa fa-twitter"></span>Our Twitter</a>
              </div>
